@startuml
skinparam linetype ortho
package "class Domain model"{
    class Card {
        - id: Long
        - container: Deck
        - frontSideContent: String
        - backSideContent: String
        - creationDate: Date
        - cardInfos: Set<UserCardInfo>
        - isFlipped: boolean
    }
    class Deck {
        - id: Long
        - title: String
        - description: String
        - creationDate: Date
        - status: DeckStatus
        - creator: User
        - content: List<Card>
        - bookmarkedBy: Set<User>
    }
    enum DeckStatus {
        PRIVATE
        PUBLIC
        LOCKED
    }
    class User {
    - username: String
    - creationDate: Date
    - password: String
    - firstName: String
    - lastName: String
    - email: String
    - enabled: boolean
    - roles: Set<UserRole>
    - createdDecks: Set<Deck>
    - bookmarks: Set<Deck>
    - cardInfos: Set<UserCardInfo>
    }
    class UserCardInfo {
        - id: UserCardInfoID
        - card: Card
        - user: User
        - creationDate: Date
        - repetitionsDate: Date
        - efFactor: float
        - numberOfRepetitions: int
        - learnInterval: int

    }
    class UserCardInfoID {
        - cardID: Long
        - username: String
    }
    enum UserRole {
        ADMIN
        LEARNER
    }
}

Card -* Deck
UserCardInfoID -> Card
UserCardInfo *-- UserCardInfoID
UserCardInfoID -> User
User .> UserRole
DeckStatus ..> Deck
Deck <-- User
@enduml